--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject"
         tools:targetApi="31">
-
+        <activity
+            android:name=".DamageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ScoreBoardActivity"
+            android:exported="false" />
         <activity
             android:name="SettingsActivity"
             android:exported="false" />
@@ -31,7 +36,6 @@
         <activity android:name="RegisterUser"/>
         <activity android:name="ResetPassword"/>
         <activity android:name="MainActivity"/>
-        <activity android:name="ScoreBoardActivity"/>
         <activity android:name="BattleActivity"/>
         <activity android:name="MovesActivity"/>
         <activity android:name="LoserActivity"/>
